[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ranger"
version = "0.1.0"
description = "Scope-aware reconnaissance orchestrator"
readme = "README.md"
authors = [{ name = "Bugcrowd Rangers" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.8",
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ranger", "ranger.*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "N",
]
ignore = [
    "B905",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
warn_unused_configs = true
mypy_path = ["."]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
